processed/gerrit/txt/50878.txt
Change:     50878
Subject:    LU-16803 build: Decouple guid_t and uuid_le
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/50878
Change-Id:  I7b2444a98c8e07ed16704d119bd748b506021ba3
Project:    fs/lustre-release
Branch:     master
Status:     ABANDONED
Owner:      Shaun Tancheff
Created:    2023-05-07 06:11:35.000000000
Updated:    2023-05-08 10:31:46.000000000
Patch Set:  1
Insertions: +37
Deletions:  -1
Comments:   2 (0 unresolved)

--- Reviewers ---
  REVIEWER: Andreas Dilger, James Simmons, Shaun Tancheff

--- Commit Message ---
LU-16803 build: Decouple guid_t and uuid_le

Linux commit v6.2-rc5-72-g5e6a51787fef
 uuid: Decouple guid_t and uuid_le types and respective macros
Removed uapi guid_t (user api should use uuid_le)

Test-Parameters: trivial
Fixes: 20621c761b ("LU-16655 scrub: change sf_uuid to guid_t")
Signed-off-by: Shaun Tancheff <shaun.tancheff@hpe.com>
Change-Id: I7b2444a98c8e07ed16704d119bd748b506021ba3

--- Review History ---

--- Message (Shaun Tancheff, 2023-05-07 06:11:35.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2023-05-07 06:12:26.000000000) ---
Patch Set 1:

(1 comment)

1 style warning(s).
For more details please see http://wiki.lustre.org/Lustre_Coding_Style_Guidelines

--- Message (jenkins, 2023-05-07 06:41:50.000000000) ---
Patch Set 1: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/94616/ : SUCCESS

--- Message (Andreas Dilger, 2023-05-07 15:11:38.000000000) ---
Patch Set 1: Code-Review-1

James also has a similar patch https://review.whamcloud.com/50641 that also fixes a second build issue and is ready to land.

--- Message (Shaun Tancheff, 2023-05-08 01:26:52.000000000) ---
Patch Set 1:

> Patch Set 1: Code-Review-1
> 
> James also has a similar patch https://review.whamcloud.com/50641 that also fixes a second build issue and is ready to land.

I was not aware. Yes James patch resolves the issue.

--- Message (Shaun Tancheff, 2023-05-08 01:27:06.000000000) ---
Abandoned

In favor of https://review.whamcloud.com/50641

--- Message (Shaun Tancheff, 2023-05-08 10:31:46.000000000) ---
Patch Set 1:

> Patch Set 1:
> 
> > Patch Set 1: Code-Review-1
> > 
> > James also has a similar patch https://review.whamcloud.com/50641 that also fixes a second build issue and is ready to land.
> 
> I was not aware. Yes James patch resolves the issue.

Ugh. Solves the user space having the newer headers but it breaks the build against v6.3:

  CC [M]  /home/shaun/lustre-release/lustre/obdclass/scrub.o
/home/shaun/lustre-release/lustre/obdclass/scrub.c: In function ‘scrub_file_to_cpu’:
/home/shaun/lustre-release/lustre/obdclass/scrub.c:50:12: error: passing argument 1 of ‘guid_copy’ from incompatible pointer type [-Werror=incompatible-pointer-types]
   50 |  guid_copy(&des->sf_uuid, &src->sf_uuid);
      |            ^~~~~~~~~~~~~
      |            |
      |            uuid_le * {aka struct <anonymous> *}
In file included from /home/shaun/lustre-release/lustre/include/lustre_scrub.h:36,
                 from /home/shaun/lustre-release/lustre/obdclass/scrub.c:38:
include/linux/uuid.h:51:38: note: expected ‘guid_t *’ {aka ‘struct <anonymous> *’} but argument is of type ‘uuid_le *’ {aka ‘struct <anonymous> *’}
   51 | static inline void guid_copy(guid_t *dst, const guid_t *src)
      |                              ~~~~~~~~^~~
